# twitchspeedtest-cli

./: CMakeLists.txt  README.md  main.cpp  twitchspeedtestcli.cpp  twitchspeedtestcli.h
.github/workflows/: cmake-multi-platform.yml
